add Draggable skeleton and style classes

--- a/client/src/components/Draggable/Draggable.scss
+++ b/client/src/components/Draggable/Draggable.scss
@@ -2,3 +2,18 @@
 @use "../../styles/partials/fonts" as *;
 @use "../../styles/partials/variables" as *;
 @use "../../styles/global" as *;
+
+.plant{
+
+    &__name{
+
+    }
+}
+
+.planter{
+
+    &__name{
+
+        
+    }
+}
