--- a/client/src/components/Planter/Planter.scss
+++ b/client/src/components/Planter/Planter.scss
@@ -3,6 +3,7 @@
 @use "../../styles/partials/fonts" as *;
 
 .planter{
+    color: wheat;
     display: flex;
     flex-direction: column;
     background-color: rgb(124, 65, 17);
@@ -13,6 +14,12 @@
     &__sort{
         display: flex;
         flex-wrap: wrap;
+    }
+    &__name{
+        width: fit-content;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 0.5rem;
     }
     
 }
