--- a/client/src/components/Drawer/Drawer.scss
+++ b/client/src/components/Drawer/Drawer.scss
@@ -6,23 +6,29 @@
 .drawer{
     position: fixed;
     display: flex;
-    flex-direction: column;
+    // flex-direction: column;
     flex-wrap: wrap;
     top: 20vh;
     left: 10vw;
     width: 80vw;
-    background-color: white;
+    
     border-radius: 20px;
-    padding: 0.5rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    box-shadow: 5px 7px 10px rgba(51, 47, 24, 0.953);
 
 
     &--plant{
         @extend .drawer;
+        background-color: rgb(144, 177, 107);
 
     }
 
     &--planter{
         @extend .drawer;
+        background-color: rgb(144, 177, 107);
 
     }
     &__close{
@@ -30,12 +36,14 @@
         height: 30px;
         margin-left: auto;
         margin-right: 0;
+        cursor: pointer;
     }
 }
 
 .list{
     display: flex;
     flex-wrap: wrap;
+    padding: 0;
 
     &--plant{
         @extend .list;
