--- a/client/src/components/SearchFIlters/SearchFilters.scss
+++ b/client/src/components/SearchFIlters/SearchFilters.scss
@@ -3,11 +3,31 @@
 @use "../../styles/partials/variables" as *;
 @use "../../styles/global" as *;
 
-.search-filter{
+.search-filter {
+  display: flex;
+  flex-wrap: wrap;
+  width: 95%;
 
-    &__checkbox{
+  &__heading {
+    width: 100%;
+  }
+  &__label {
+    width: fit-content;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    background-color: rgba(0, 225, 255, 0.577);
+    border: 1px solid rgba(0, 100, 0, 0.451);
+    box-shadow: 2px 2px 4px rgba(51, 47, 24, 0.565);
+    border-radius: 20px;
+    margin-right: 0.5rem;
+    margin-bottom: 0.2rem;
+  }
 
-        
-    }
-
+  &__checkbox {
+//    appearance: none;
+//    margin: 0;
+  }
+  
 }
