--- a/client/src/components/Plant/Plant.scss
+++ b/client/src/components/Plant/Plant.scss
@@ -5,7 +5,7 @@
 .plant {
     width: 5.5rem;
     height: 5.5rem;
-    background-color: rgba(121, 217, 11, 0.184);
+    background-color: $brown-opacity;
     border-radius: 20%;
     padding: 0;
     margin: 0.2rem;
