--- a/client/src/styles/partials/_variables.scss
+++ b/client/src/styles/partials/_variables.scss
@@ -3,6 +3,19 @@ $tablet-breakpoint: 768px;
 $desktop-breakpoint: 1280px;
 
 //Colors - Primary
+$olivine: #8FB473;
+$straw: #D0DC76;
+$maize: #FCEA79;
+$saffron: #F2C34E;
+$bronze: #D1853A;
+$myrtle: #357f7f;
+$dark-blue: #2D3047;
+$red: #DA627D;
+
+$brown: #342A21;
+$brown-opacity: #342a21c8;
+$black: #353535; 
+$grey: #656565;
 
 
 //Colors - Secondary
