--- a/client/src/components/ModalPlant/ModalPlant.scss
+++ b/client/src/components/ModalPlant/ModalPlant.scss
@@ -17,7 +17,8 @@
     &--modal{
         display: flex;
         flex-direction: column;
-        background-color: rgb(197, 203, 242);
+        background-color: $brown-opacity;
+        color: $saffron;
         border-radius: 20%;
         padding: 0.2rem;
         margin: 0.2rem;
