--- a/client/src/components/ModalPlanter/ModalPlanter.scss
+++ b/client/src/components/ModalPlanter/ModalPlanter.scss
@@ -2,24 +2,34 @@
 @use "../../styles/partials/mixins" as *;
 @use "../../styles/partials/fonts" as *;
 
-.planter{
-    color: wheat;
+.planter {
+
+  &--modal {
     display: flex;
     flex-direction: column;
-    background-color: rgb(124, 65, 17);
-    border: 2px solid black;
+    color: $brown;
+    background-color: $bronze;
     border-radius: 10px;
     padding: 0.5rem;
+    margin: 0.2rem;
+    box-shadow: 2px 2px 4px rgba(51, 47, 24, 0.565);
+  }
 
-    &__sort{
-        display: flex;
-        flex-wrap: wrap;
-    }
-    &__name{
-        width: fit-content;
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: 0.5rem;
-    }
-    
+  &__sort {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  &__name {
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0.5rem;
+  }
+  &__add {
+    width: 40px;
+    height: 40px;
+    margin-left: auto;
+    margin-right: auto;
+    cursor: pointer;
+  }
 }
