--- a/client/src/components/SearchFIlters/SearchFilters.scss
+++ b/client/src/components/SearchFIlters/SearchFilters.scss
@@ -13,27 +13,37 @@
   }
   &__label {
     width: fit-content;
-    padding-top: 0.5rem;
+    padding-top: 0.8rem;
     padding-bottom: 0.5rem;
     padding-left: 1rem;
     padding-right: 1rem;
     background-color: $straw;
     color: $brown;
     font-weight: 600;
-    
+
     box-shadow: 2px 2px 4px rgba(51, 47, 24, 0.565);
     border-radius: 20px;
     margin-right: 0.5rem;
     margin-bottom: 0.2rem;
+
+    &:hover {
+      background-color: $saffron;
+    }
+    &:active {
+      scale: 0.9;
+    }
   }
 
   &__checkbox {
-//    appearance: none;
-//    margin: 0;
+       appearance: none;
+       margin: 0;
+
   }
-  
 }
-// active
-// background-color: $myrtle;
-// color: $maize;
-// border: 1px solid $dark-blue;
+
+.true {
+    background-color: $myrtle;
+    color: $brown;
+    scale: 0.9;
+    
+  }
