--- a/client/src/components/ModalPlanter/ModalPlanter.scss
+++ b/client/src/components/ModalPlanter/ModalPlanter.scss
@@ -25,11 +25,14 @@
     margin-right: auto;
     margin-top: 0.5rem;
   }
-  &__add {
+  &__add--modal {
     width: 40px;
     height: 40px;
     margin-left: auto;
     margin-right: auto;
     cursor: pointer;
+    &:hover{
+        scale: 1.1;
+    }
   }
 }
