--- a/client/src/components/Planter/Planter.scss
+++ b/client/src/components/Planter/Planter.scss
@@ -14,7 +14,13 @@
     margin: 1rem;
 
     &__name-wrapper{
-        width: 95%;
+        margin-left: auto;
+        margin-right: auto;
+        width: 90%;
+        cursor: pointer;
+        &:hover{
+            scale: 1.05;
+        }
     }
 
     &__sort{
@@ -33,6 +39,11 @@
         margin-left: auto;
         margin-right: 0;
         cursor: pointer;
+        &:hover{
+            scale: 1.1;
+        }
     }
     
 }
+
+
