delete modal functional

--- a/client/src/styles/partials/_variables.scss
+++ b/client/src/styles/partials/_variables.scss
@@ -10,7 +10,7 @@ $saffron: #F2C34E;
 $bronze: #D1853A;
 $myrtle: #357f7f;
 $dark-blue: #2D3047;
-$red: #DA627D;
+$red: #d03758;
 
 $brown: #342A21;
 $brown-opacity: #342a21c8;
