add color change on planter handle

--- a/client/src/styles/partials/_variables.scss
+++ b/client/src/styles/partials/_variables.scss
@@ -8,6 +8,7 @@ $straw: #D0DC76;
 $maize: #FCEA79;
 $saffron: #F2C34E;
 $bronze: #D1853A;
+$bronze-dark:rgba(127, 83, 40, 0.854);
 $myrtle: #357f7f;
 $dark-blue: #2D3047;
 $red: #d03758;
