--- a/client/src/components/Planter/Planter.scss
+++ b/client/src/components/Planter/Planter.scss
@@ -22,17 +22,18 @@
     &__name-wrapper{
         margin-left: auto;
         margin-right: auto;
+        border-radius: 20px;
         width: 90%;
         cursor: pointer;
         &:hover{
-            scale: 1.05;
+            background-color: $bronze-dark;
         }
     }
 
     &__sort{
         display: flex;
         flex-wrap: wrap;
-        width: 100%;
+        width: fit-content;
         margin-left: auto;
         margin-right: auto;
     }
