--- a/client/src/components/Planter/Planter.scss
+++ b/client/src/components/Planter/Planter.scss
@@ -2,58 +2,62 @@
 @use "../../styles/partials/mixins" as *;
 @use "../../styles/partials/fonts" as *;
 
-.planter{
-    color: $brown;
-    background-color: $bronze;
+.planter {
+  display: flex;
+  flex-wrap: wrap;
+  // flex-direction: column;
+
+  padding: 0.5rem;
+  margin: 1rem;
+  width: fit-content;
+
+  &__wrapper {
     display: flex;
-    flex-wrap: wrap;
-    // flex-direction: column;
+    width: 100%;
+    margin-top: auto;
+    margin-bottom: 0;
     box-shadow: 2px 2px 4px rgba(51, 47, 24, 0.565);
     border-radius: 10px;
-    padding: 0.5rem;
-    margin: 1rem;
+  }
+
+  &__name-wrapper {
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 20px;
+    width: 90%;
+    cursor: pointer;
+    &:hover {
+      background-color: $bronze-dark;
+    }
+  }
+
+  &__sort {
+    color: $brown;
+    background-color: $bronze;
+    box-shadow: 2px 2px 4px rgba(51, 47, 24, 0.565);
+    border-radius: 10px;
+    display: flex;
+    flex-wrap: wrap;
     width: fit-content;
-
-    &__wrapper{
-        display: flex;
-        width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  &__name {
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+    padding: 0.2rem;
+  }
+  &__add {
+    width: 40px;
+    height: 40px;
+    margin-left: auto;
+    margin-right: 0;
+    cursor: pointer;
+    &:hover {
+      scale: 1.1;
     }
-
-    &__name-wrapper{
-        margin-left: auto;
-        margin-right: auto;
-        border-radius: 20px;
-        width: 90%;
-        cursor: pointer;
-        &:hover{
-            background-color: $bronze-dark;
-        }
-    }
-
-    &__sort{
-        display: flex;
-        flex-wrap: wrap;
-        width: fit-content;
-        margin-left: auto;
-        margin-right: auto;
-    }
-    &__name{
-        width: fit-content;
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: 0.5rem;
-    }
-    &__add{
-        width: 40px;
-        height: 40px;
-        margin-left: auto;
-        margin-right: 0;
-        cursor: pointer;
-        &:hover{
-            scale: 1.1;
-        }
-    }
-    
+  }
 }
-
-
