--- a/client/src/components/Drawer/Drawer.scss
+++ b/client/src/components/Drawer/Drawer.scss
@@ -11,6 +11,7 @@
   top: 20vh;
   left: 10vw;
   width: 80vw;
+  max-width: 90rem;
 
   border-radius: 20px;
   padding-top: 0.5rem;
@@ -18,6 +19,10 @@
   padding-left: 1rem;
   padding-right: 1rem;
   box-shadow: 5px 7px 10px rgba(51, 47, 24, 0.953);
+
+  @include desktop {
+    left: 20vw;
+  }
 
 
   &--plant {
